--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,4 +34,7 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+
+      - name: Official SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v1.2.0
           
